

                 SCons - a software construction tool

                            Change Log


RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE

  From Philipp Maierhöfer
    - Added a __hash__ method to the class Scons.Subst.Literal. Required when substituting Literal
      objects when SCons runs with Python 3.

  From Richard West:
    - Add SConstruct.py, Sconstruct.py, sconstruct.py to the search path for the root SConstruct file.
      Allows easier debugging within Visual Studio

  From Bernard Blackham:
   - Fixed handling of side-effects in task master (fixes #3013).

  From Daniel Moody:
    - Set the pickling protocal back to highest which was causing issues 
      with variant dir tests. This will cause issues if reading sconsigns
      pickled with the previous lower protocal.
      
  From Ray Donnelly:
    - Fix the PATH created by scons.bat (and other .bat files) to provide a normalized
      PATH.  Some pythons in the 3.6 series are no longer able to handle paths which
      have ".." in them and end up crashing.  This is done by cd'ing into the directory
      we want to add to the path and then useing %CD% to give us the normalized directory
      See bug filed under Python 3.6: https://bugs.python.org/issue32457.
      Note: On Win32 PATH's which have not been normalized may cause undefined behavior
      by other executables being run by SCons (or any subprocesses of executables being run by SCons).
      Resolving this issue should eliminate that possibility going forward.

  From William Deegan:
    - Remove long deprecated SCons.Options code and tests.  This removes BoolOption,EnumOption,
      ListOption,PackageOption, and PathOption which have been replaced by *Variable() many years ago.
    - Fix issue # 3106 MSVC if using MSVC_BATCH and target dir had a space would fail due to quirk in
      MSVC's handling of escaped targetdirs when batch compiling.
    - Re-Enable parallel SCons (-j) when running via Pypy